--- a/ejemplo.html
+++ b/ejemplo.html
@@ -10,6 +10,7 @@
     <header>
         <h1>Tomas Lagomarsino</h1>
         <p>Soy profesor y tengo 27</p>
+        <P>tengo 2 hijas y estoy casado</P>
     </header>
     <h1>Hola mundo</h1>
 </body>
