--- a/ejemplo.html
+++ b/ejemplo.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Tomas Lagomarsino</h1>
-        <p>Soy profesor y tengo 27</p>
+        <p>Soy profesor, tengo 27 y soy programador</p>
     </header>
     <h1>Hola mundo</h1>
 </body>
