--- a/ejemplo.html
+++ b/ejemplo.html
@@ -11,6 +11,7 @@
         <h1>Tomas Lagomarsino</h1>
         <p>Soy profesor y tengo 27</p>
         <P>tengo 2 hijas y estoy casado</P>
+        <p>me gusta la musica internacional</p>
     </header>
     <h1>Hola mundo</h1>
 </body>
