prueba de git cola

--- a/ejemplo.html
+++ b/ejemplo.html
@@ -12,7 +12,7 @@
         <p>Soy profesor, tengo 27 y soy programador</p>
         <P>tengo 2 hijas y estoy casado</P>
         <p>me gusta la musica internacional</p>
-        <p>prueba de commit --amend</p>
+        <p>prueba de commit --amend 2</p>
     </header>
     <h1>Hola mundo</h1>
 </body>
