--- a/ejemplo.html
+++ b/ejemplo.html
@@ -15,6 +15,6 @@
         <p>prueba de commit --amend 2</p>
     </header>
     <h1>Hola mundo</h1>
-    
+    prueba commit antes de soft
 </body>
 </html>
