cambios desde GitHub

--- a/ejemplo.html
+++ b/ejemplo.html
@@ -14,6 +14,7 @@
         <p>me gusta la musica internacional</p>
         <p>prueba de commit --amend 2</p>
     </header>
+    <h1>Pruebs desde Git Hub</h1>
     <Button>CLICK</Button>
     <h1>Hola mundo</h1>
     prueba commit antes de soft
