--- a/ejemplo.html
+++ b/ejemplo.html
@@ -17,6 +17,7 @@
     <h1>Pruebs desde Git Hub</h1>
     <Button>CLICK</Button>
     <h1>Hola mundo</h1>
+    <h2>Hpla desde local a github</h2>
     prueba commit antes de soft
 </body>
 </html>
