--- a/ejemplo.html
+++ b/ejemplo.html
@@ -12,24 +12,21 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Tomas Agustin Lagomarsino</a>
+              <a class="navbar-brand" href="ejemplo.html">Tomas Agustin Lagomarsino</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Sobre Mi</a>
-                  <a class="nav-link" href="#">Estudios</a>
-                  <a class="nav-link" href="#">Trabajo</a>
+                  <a class="nav-link" href="#">Sobre Mi</a>
+                  <a class="nav-link" href="estudios.html">Estudios</a>
+                  <a class="nav-link" href="experiencia.html">Trabajo</a>
                 </div>
               </div>
             </div>
           </nav>
     </header>
-    <h1>Pruebs desde Git Hub</h1>
-    <Button class="btn btn-primary">CLICK</Button>
-    <h1>Hola mundo</h1>
-    <h2>Hpla desde local a github</h2>
+    <h1>Hola desde Sobre mi</h1>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </html>
